# postgressAdmin

./: CONNECTION_PROFILE_STORE_IMPLEMENTATION.md  DATA_MODIFICATION_TEST.md  ERROR_HANDLING_IMPROVEMENTS.md  README.md  SETUP_WINDOWS.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_CONNECTION_HEALTH_IMPLEMENTATION.md  agent_hooks.json  agent_steering_rules.md  design.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.md  setup.md  verify_credential_vault.md  vite.config.ts
.kiro/: design.md  requirements.md  tasks.md
.kiro/steering/: project_rules.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  user.csv  user.json  user_2025-07-31T12-31-04.json  user_2025-07-31T12-31-12.csv  user_2025-07-31T12-38-47.csv
src-tauri/src/: commands.rs  connection_health_commands.rs  connection_health_service.rs  connection_health_service_test.rs  connection_pool.rs  connection_profile.rs  connection_profile_commands.rs  connection_profile_store.rs  connection_profile_store_commands.rs  connection_profile_store_test.rs  credential_vault.rs  credential_vault_commands.rs  credential_vault_test.rs  lib.rs  main.rs  simple_db.rs
src/components/: ConnectionHealthDemo.tsx  ConnectionHealthTest.tsx  ConnectionManager.tsx  ConnectionProfileManager.md  ConnectionProfileManager.tsx  ConnectionProfileManagerDemo.tsx  ConnectionProfileStoreTest.tsx  EditableCell.tsx  ErrorBoundary.tsx  ExportDialog.tsx  HelpDialog.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  LogViewer.tsx  QueryEditor.tsx  ResultsViewer.tsx  ResultsViewer.tsx.backup  SchemaExplorer.tsx  (+2 more)
(+29 files in other folders)
